# zero2prod_axum

./: .dockerignore  .envrc  Cargo.toml  Dockerfile  configuration.yml  makefile
configuration/: base.yml  local.yml  production.yml
migrations/: 20230918122843_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: .envrc  Dockerfile_old.txt  app.rs  configuration.rs  email_client.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/models/: mod.rs  new_subscriber.rs  token_query.rs  validation.rs
src/routes/: confirm.rs  mod.rs  subscribe.rs  utils.rs
tests/: healthcheck.rs  subscribe.rs
tests/api/: confirm.rs  healthcheck.rs  main.rs  subscribe.rs
tests/api/test_utils/: mod.rs
tests/routes/: healthcheck.rs  subscribe.rs
tests/test_utils/: mod.rs
