[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.4.0"
axum = "0.6.20"
axum-macros = "0.3.8"
axum-test-helper = "0.3.0"
chrono = "0.4.29"
config = "0.13.3"
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
sqlx = {version = "0.7.1", features = [ 
    "runtime-tokio", 
    "tls-rustls", 
    "postgres", 
    "macros",
    "uuid",
    "chrono",
    "migrate"]}
sqlx-cli = { version = "0.7.1", default-features = false, features = ["postgres"] }
tokio = { version ="1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.37"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }

uuid = { version = "1.4.1", features = ["v4"]}
