[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.4.0"
axum = "0.6.20"
axum-macros = "0.3.8"
axum-test-helper = "0.3.0"
chrono = "0.4.29"
config = "0.13.3"
email_address = "0.2.4"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive", "serde_derive"] }
sqlx = {version = "0.7.1", features = [ 
    "runtime-tokio", 
    "tls-rustls", 
    "postgres", 
    "macros",
    "uuid",
    "chrono",
    "migrate"]}
sqlx-cli = { version = "0.7.1", default-features = false, features = ["postgres"] }
tokio = { version ="1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.9"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "registry", "env-filter" ] }
unicode-segmentation = "1.10.1"

uuid = { version = "1.4.1", features = ["v4"]}
validator = {version="0.16.1", features=["derive"]}

[dev-dependencies]
fake = "2.8.0"
futures = "0.3.28"
once_cell = "1.18.0"
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
